# nsfw-prompt-detection

./: .gitmodules  LICENSE  README.md  pyproject.toml
artifacts/label/: label.pkl
artifacts/pred/: pred_baseline.pkl  pred_nsfw_classifier.pkl
data/: __init__.py  data.py
eda/: dataset_overview.ipynb
evaluate/: explainable.ipynb  performance.ipynb
model/: __init__.py  base.py  baseline_classifier.py  nsfw_classifier.py
train/: baseline_classifier.py  nsfw_classifier.py  nsfw_classifier_resume_training_on_Civitai_2m_prompts.py
