[project]
name = "nsfw-prompt-detection"
version = "0.1.0"
description = "A project for detecting NSFW prompts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "fire>=0.7.1",
    "ipywidgets>=8.1.8",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pkbar>=0.5",
    "pytorch-lightning>=2.5.6",
    "rocauc-comparison>=0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "wandb>=0.18.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.ruff]
lint.select = ["D", "E", "F", "RUF", "W"]
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.format]
docstring-code-format = true
